--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,11 @@
+auto: true
+
 markdown: rdiscount
 pygments: true
+paginate: 8
+permalink: /:title
+
+title: Leon
+url: http://beiyuu.com
+feed: /atom.xml
+author_info: <a href="http://beiyuu.com/">BeiYuu</a>
